# xz

./: .gitignore  AUDIT_REPORT.md  FALLOW_REPORT.md  ICONS.MD  N.MD  README.md  components.json  eslint.config.js  fallow_baseline.json  fallow_baseline.txt  fallow_final.txt  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.json
.jules/: bolt.md  palette.md  pixel.md
agent/: Makefile  README.md  go.mod
agents & rules/: agents.md  gemini.md  gemini_research.md  prompt.md  rules.md  scope.md
docs/: AUDIT_REPORTS.md  Code_editor.md  File_upload_function.md  agentic-tools-plan.md  artifact-preview-gap-analysis.md  artifact-research.md  artifacts-architecture-blueprint.md  cli-detection-plan.md  dark-mode-guide.md  ide-feature-ideas.md  plugins-tab-ideas.md  sample.md  schedule-tab-ideas.md  semantic-theming-plan.md  settings-chat-design-guide.md  steps.md  thinking-timeline-ui-plan.md  tool-system-architecture.md  websearch-tool-plan.md  wiki-tab-ideas.md  write-tool-plan.md
server/: .env.example  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  .tauri-keys  .tauri-keys.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs
tests/: aiService.test.ts  chat-performance.test.tsx  chatFlow.test.tsx  chatUtils.test.ts  searchService.test.ts  systemInfo.test.ts  tauri.test.ts
types/: chat.ts  hugeicons-core.d.ts  hugeicons.d.ts  tauri-globals.d.ts
vibe-code/: AGENTS.md  API.md  CONTRIBUTING.md  (+14 more)
(+264 files in other folders)
