[package]
name = "xz-desktop"
version = "0.15.0"
description = "xz desktop shell"
authors = ["xz Team"]
license = "MIT"
repository = "https://github.com/nbuvhvj8/superious"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
once_cell = "1.19"
reqwest = { version = "0.13.3", features = ["stream"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
